# crypto-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  crypto_analyzer.py  crypto_report.csv  crypto_report.db  crypto_report.json  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
crypto/: admin.py  apps.py  cache.py  exception_handler.py  exceptions.py  filters.py  health.py  models.py  pagination.py  permissions.py  schemas.py  serializers.py  services.py  signals.py  tasks.py  throttling.py  urls.py  views.py
crypto/management/commands/: fetch_snapshot.py  raise_test_error.py  seed_data.py
crypto/migrations/: 0001_initial.py  0002_alter_coinprice_options_alter_snapshot_options_and_more.py  0003_watchlistitem.py  0004_balance_portfolio.py  0005_enable_pg_stat_statements.py  0006_add_performance_indexes.py
docker/grafana/dashboards/: crypto.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/logstash/pipeline/: django.conf
docker/prometheus/: prometheus.yml
src/: analyzer.py  api_client.py  main.py  models.py  parsers.py  providers.py  settings.py  storage.py  visualizers.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_portfolio.py  test_providers.py  test_storage.py  test_tasks.py  test_watchlist.py
tests/unit/: conftest.py  test_analyzer.py  test_api_client.py  test_health.py  test_main.py  test_models.py  test_parsers.py  test_providers.py  test_services.py  test_storage.py  test_visualizers.py
