[project]
name = "crypto-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "idna==3.11",
    "librt==0.8.1",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pathspec==1.0.4",
    "pygments==2.19.2",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "rich==14.3.3",
    "shellingham==1.5.4",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = [
    "-v",
    "-ra",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]
