[project]
name = "crypto-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "idna==3.11",
    "ipython>=9.12.0",
    "librt==0.8.1",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "pathspec==1.0.4",
    "psycopg2-binary>=2.9.11",
    "pygments==2.19.2",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "rich==14.3.3",
    "shellingham==1.5.4",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "tzdata>=2025.3",
    "urllib3==2.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "mypy-extensions==1.1.0",
    { include-group = "test" },
]

test = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
markers = [
    "unit: Quick tests with mocks (no I/O or DB)",
    "integration: Tests that interact with DB or File System",
]
addopts = [
    "-v",
    "-ra",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.coverage.report]
exclude_lines = [
    # Игнорировать стандартную проверку запуска модуля
    "if __name__ == .__main__.:",
]
